# hemingway_the_data_journalist

./: .gitignore  LICENSE  README.md  failed_queries.json  main.py  pyproject.toml  risk_factors.db  seal_query_results_20250611_191905.json  stock_analyzer.py
.cursor/rules/: fixbug.mdc
agents/: debate_agent.py  requirements.txt
data/stats_gov_cn/: stats_gov_cn_articles_20250329_144754.json
projects/: temp.py
projects/RL_learner/: DQN.py  Muzero.py
projects/active_portfolio_mgmt/: technical_trader.py
projects/apk_scraper/: README.md  mock_scraper.py
projects/conformal_prediction/: README.md  conformal_prediction_for_LR.py
projects/credit_interview_brain/: index.html  prd.md
projects/credit_policy_agent/: README.md  dev_roadmap.md  main.py  requirements.txt  test_example.py
projects/default_cause_analysis/: default_cause_word_count.py
projects/dynamical_credit_lines_and_prices/: README.md  demo_portico.py  portfolio_simulator.py  portico_model.py  quick_demo.py  requirements.txt  test_portico.py
projects/graph_mining/: graph_databse.py
projects/lee_ready_trader/: main.py
projects/lifecycle_loan_portfolio_valuation/: instruction.md  lifecycle_portfolio_value.py
projects/loan_insurance_selection/: gemini_instruction.txt  loan_insurance_optimize.py
projects/loan_portfolio_exit_strategy/: code_desc.md  instruction.md  instruction_zh.md  simulate_two_strategies.py
projects/loan_portfolio_stress_testing/: vintage_apc.py  vintage_model.py
projects/pboc_feature_engineering/: README.md  create_pboc_database.py  custom_features.py  feature_factory.py  query_pboc_database.py  requirements.txt
projects/portfolio_tracking/: sunbusrt_visual.py
projects/risk_factor_store/: README.md  __init__.py  architecture.md  demo_barra_factor_model.py  setup.py
projects/scf_accounting/: README.md  apply_optimal_pricing.py  bnpl_pricing_optimizer.py  default_rate_analysis.py  default_sensitivity_summary.md  demo_for_managers.py  management_presentation.md  pricing_optimization_summary.md  requirements.txt  scf_accounting_BNPL.py  test_fonts.py
projects/shyz_scraper_agent/: README.md  audi_resalers_scrapers.py  comprehensive_test.py  config.py  debug_drission_detailed.py  debug_input_comprehensive.py  debug_selectors.py  debug_two_stage_query.py  example_usage.py  failed_queries.json  page_source.html  production_scraper.py  quick_test.py  requirements.txt  shyz_scrape_by_enterprise_name.py  shyz_scraper_drission.py  (+4 more)
tools/: alpha_vantage_tool.py
(+152 files in other folders)
