[project]
name = "hemingway-the-data-journalist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6.0",
    "torchdata",
    "statsmodels",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "plotly",
    "pandas",
    "spacy",
    "transformers",
    "beautifulsoup4",
    "openpyxl",
    "ipykernel",
    "lxml",
    "ruff",
    "pulp>=3.1.1",
    "pypdf>=5.4.0",
    "jieba>=0.42.1",
    "neo4j>=5.28.1",
    "lifelines>=0.30.0",
    "yfinance>=0.2.61",
    "gymnasium[classic-control]>=1.1.1",
    "scipy>=1.15.2",
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "requests>=2.32.3",
    # Credit Risk Factor Store Dependencies
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "xgboost>=2.0.0",
    "numpy>=1.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "asyncpg>=0.29.0",
    "websockets>=12.0",
    "schedule>=1.2.0",
    "aioredis>=2.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "pandas-datareader>=0.10.0",
    "fredapi>=0.5.0",
    "newsapi-python>=0.2.6",
    "textblob>=0.17.1",
    "vaderSentiment>=3.3.2",
    "prometheus-client>=0.19.0",
    "structlog>=23.0.0",
    "alembic>=1.13.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pydantic-settings>=2.9.1",
    "drissionpage>=4.1.0.18",
    "pyperclip>=1.9.0",
    "selenium>=4.33.0",
]

[pip]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
[tool.uv.pip]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
